<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/settingsButton"
        android:src="@drawable/history_icon"
        android:contentDescription="@string/historyButtonDescription" />
    <ImageButton
        android:id="@+id/placeholderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:layout_constraintLeft_toRightOf="@id/historyButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/settingsButton"
        android:src="@drawable/placeholder_icon"
        android:contentDescription="@string/placeholderButtonDescription" />
    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:layout_constraintLeft_toRightOf="@id/historyButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/settings_icon"
        android:contentDescription="@string/settingsButtonDescription" />

    <ScrollView
        android:id="@+id/history"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/border">
        <LinearLayout
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/history"
        android:layout_margin="15dp"
        android:text="@string/ageButton"
        android:onClick="onAgeButtonPressed"
        />

</androidx.constraintlayout.widget.ConstraintLayout>